# carbon

./: .gitignore  .gitmodules  .pre-commit.sh  CLONE_ELIMINATION_EXPLORATION.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NEXT_STEPS_ANALYSIS.md  README.md  arc-clone-optimization.md  arc.md  bench-base-clone-removal.md  bench-base.md  ci.sh  clippy.toml  cursor_1_understanding_carbon_cli_and.md  cursor_2_refactor_carbon_version_regis.md  drift_modified.json  fix_raydium_idl.js  generate_dlmm.sh  jup_limit2.json  jup_limit2_modified.json  kamino_lending.json  loop-structure-optimization.md  lr.txt  marginfi-v2.json  no-arc.md  okx.json  package.json  pnpm-lock.yaml  prometheus.yml  raydium_amm_fixed.json  rustfmt.toml  storage_analysis.md  taplo.toml  test_postgres_modes.sh  tsconfig.base.json  turbo.json  unaccounted-time-analysis.md
crates/borsh-types/: Cargo.toml
crates/borsh-types/src/: lib.rs  option_bool.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: accounts.rs  commands.rs  events.rs  idl.rs  instructions.rs  legacy_idl.rs  main.rs  project.rs  types.rs  util.rs
crates/cli/src/handlers/: mod.rs  parse.rs  process_pda_idl.rs  scaffold_project.rs
crates/cli/templates/: accounts_mod.askama  accounts_struct.askama  events_struct.askama  instructions_mod.askama  instructions_struct.askama  project.askama  types_struct.askama
crates/core/: Cargo.toml  README.md
crates/core/src/: account.rs  account_deletion.rs  account_utils.rs  block.rs  block_details.rs  collection.rs  datasink.rs  datasource.rs  deserialization.rs  deserialize.rs  discriminator.rs  error.rs  filter.rs  instruction.rs  lib.rs  logs.rs  metrics.rs  pipeline.rs  processor.rs  schema.rs  slot.rs  transaction.rs  transformers.rs  utils.rs
crates/core/src/graphql/: mod.rs  primitives.rs  server.rs
crates/core/src/postgres/: metadata.rs  mod.rs  operations.rs  primitives.rs  processors.rs  rows.rs
crates/core/tests/: README.md
crates/core/tests/fixtures/: cpi_tx.json  nested_cpi_tx.json  simple_tx.json
crates/gql-server/: Cargo.toml
crates/gql-server/src/: lib.rs  mutation.rs  query.rs  server.rs
crates/gql-server/src/types/: amount.rs  decimals.rs  i128.rs  i64.rs  mod.rs  pubkey.rs  u128.rs  u32.rs  u64.rs  u8.rs
crates/idl-parser-cli/: Cargo.toml  meteora_idl.json  raydium_clmm_idl.json
crates/idl-parser-cli/src/: accounts.rs  commands.rs  idl.rs  instructions.rs  main.rs  util.rs
crates/idl-parser-cli/src/handlers/: parse.rs
crates/idl-parser-cli/templates/: accounts_struct.rs
crates/legacy/: Cargo.toml
crates/legacy/src/: account.rs  compiled_instruction.rs  lib.rs  pubkey.rs  transaction_error.rs  transaction_status_meta.rs  ui_transaction_status_meta.rs  versioned_transaction.rs
crates/macros/: Cargo.toml  README.md
crates/macros/src/: collection.rs  lib.rs  schema.rs  schemas.rs  try_decode_ixs.rs
crates/postgres-client/: Cargo.toml
crates/postgres-client/src/: lib.rs
crates/proc-macros/: Cargo.toml  README.md
crates/proc-macros/src/: lib.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: base58_deserialize.rs  base64_deserialize.rs  field_as_string.rs  hex_deserialize.rs  lib.rs
datasinks/postgres-datasink/: Cargo.toml
datasinks/postgres-datasink/src/: lib.rs
datasources/bigquery-datasource/: Cargo.toml
datasources/bigquery-datasource/src/: lib.rs
datasources/helius-atlas-ws-datasource/: Cargo.toml  README.md
datasources/helius-atlas-ws-datasource/src/: lib.rs
datasources/helius-gpa-v2-datasource/: Cargo.toml  README.md
datasources/helius-gpa-v2-datasource/src/: lib.rs  types.rs
datasources/helius-gtfa-datasource/: Cargo.toml
datasources/helius-gtfa-datasource/src/: lib.rs  types.rs
datasources/helius-laserstream-datasource/: Cargo.toml  README.md
datasources/helius-laserstream-datasource/src/: lib.rs
datasources/jetstreamer-datasource/: Cargo.toml  README.md
datasources/jetstreamer-datasource/src/: filter.rs  lib.rs  range.rs
datasources/jito-shredstream-grpc-datasource/: Cargo.toml  README.md
datasources/jito-shredstream-grpc-datasource/src/: lib.rs
datasources/rpc-block-crawler-datasource/: Cargo.toml  README.md
datasources/rpc-block-crawler-datasource/src/: lib.rs
datasources/rpc-block-subscribe-datasource/: Cargo.toml  README.md
datasources/rpc-block-subscribe-datasource/src/: lib.rs
datasources/rpc-gpa-datasource/: Cargo.toml  README.md
datasources/rpc-gpa-datasource/src/: lib.rs
datasources/rpc-logs-subscribe-datasource/: Cargo.toml
datasources/rpc-logs-subscribe-datasource/src/: lib.rs
datasources/rpc-program-subscribe-datasource/: Cargo.toml  README.md
datasources/rpc-program-subscribe-datasource/src/: lib.rs
datasources/rpc-transaction-crawler-datasource/: Cargo.toml  README.md
datasources/rpc-transaction-crawler-datasource/src/: lib.rs
datasources/stream-message-datasource/: Cargo.toml  README.md
datasources/stream-message-datasource/src/: lib.rs
datasources/validator-snapshot-datasource/: Cargo.toml  README.md
datasources/validator-snapshot-datasource/src/: downloader.rs  lib.rs
datasources/yellowstone-grpc-datasource/: Cargo.toml  README.md
datasources/yellowstone-grpc-datasource/src/: lib.rs
decoders/address-lookup-table-decoder/: Cargo.toml  README.md
decoders/address-lookup-table-decoder/src/: lib.rs
decoders/address-lookup-table-decoder/src/accounts/: address_lookup_table.rs  mod.rs
decoders/address-lookup-table-decoder/src/graphql/: query.rs
decoders/address-lookup-table-decoder/src/instructions/: close_lookup_table.rs  create_lookup_table.rs  deactivate_lookup_table.rs  extend_lookup_table.rs  freeze_lookup_table.rs  mod.rs
decoders/address-lookup-table-decoder/src/types/: lookup_table_addresses.rs  lookup_table_meta.rs
decoders/address_lookup_table_decoder/: Cargo.toml
decoders/address_lookup_table_decoder/src/accounts/: address_lookup_table.rs  mod.rs  uninitialized.rs
decoders/address_lookup_table_decoder/src/instructions/: close_lookup_table.rs  create_lookup_table.rs  deactivate_lookup_table.rs  extend_lookup_table.rs  mod.rs  (+1 more)
(+12756 files in other folders)
