[workspace]
members = ["crates/*", "datasources/*", "decoders/*", "examples/*", "metrics/*"]
resolver = "2"

[workspace.package]
rust-version = "1.82"
version = "0.9.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/sevenlabs-hq/carbon"

[workspace.dependencies]

# other
anyhow = "1.0.96"
askama = "0.12.1"
async-stream = "0.3.6"
async-trait = { version = "0.1.86" }
axum = "0.8.4"
base64 = "0.22.1"
bincode = "1.3.3"
borsh = { version = "1.5.1" }
borsh-derive-internal = "0.10.3"
bs58 = { version = "0.5.1", default-features = false }

# decoders
carbon-address-lookup-table-decoder = { path = "decoders/address-lookup-table-decoder", version = "0.9.1" }
carbon-associated-token-account-decoder = { path = "decoders/associated-token-account-decoder", version = "0.9.1" }
carbon-boop-decoder = { path = "decoders/boop-decoder", version = "0.9.1" }

# main
carbon-cli = { path = "crates/cli", version = "0.9.1" }
carbon-core = { path = "crates/core", version = "0.9.1" }
carbon-drift-v2-decoder = { path = "decoders/drift-v2-decoder", version = "0.9.1" }
carbon-fluxbeam-decoder = { path = "decoders/fluxbeam-decoder", version = "0.9.1" }
carbon-gavel-decoder = { path = "decoders/gavel-decoder", version = "0.9.1" }

# storage and api
carbon-gql-server = { path = "crates/gql-server", version = "0.9.1" }

# datasources
carbon-helius-atlas-ws-datasource = { path = "datasources/helius-atlas-ws-datasource", version = "0.9.1" }
stream-message-datasource = { path = "datasources/stream-message-datasource", version = "0.9.1" }

# vendor
carbon-jito-protos = { path = "misc/jito-protos", version = "0.2.4" }
carbon-jito-shredstream-grpc-datasource = { path = "datasources/jito-shredstream-grpc-datasource", version = "0.9.1" }
carbon-jupiter-dca-decoder = { path = "decoders/jupiter-dca-decoder", version = "0.9.1" }
carbon-jupiter-limit-order-2-decoder = { path = "decoders/jupiter-limit-order-2-decoder", version = "0.9.1" }
carbon-jupiter-limit-order-decoder = { path = "decoders/jupiter-limit-order-decoder", version = "0.9.1" }
carbon-jupiter-perpetuals-decoder = { path = "decoders/jupiter-perpetuals-decoder", version = "0.9.1" }
carbon-jupiter-swap-decoder = { path = "decoders/jupiter-swap-decoder", version = "0.9.1" }
carbon-kamino-farms-decoder = { path = "decoders/kamino-farms-decoder", version = "0.9.1" }
carbon-kamino-lending-decoder = { path = "decoders/kamino-lending-decoder", version = "0.9.1" }
carbon-kamino-limit-order-decoder = { path = "decoders/kamino-limit-order-decoder", version = "0.9.1" }
carbon-kamino-vault-decoder = { path = "decoders/kamino-vault-decoder", version = "0.9.1" }
carbon-lifinity-amm-v2-decoder = { path = "decoders/lifinity-amm-v2-decoder", version = "0.9.1" }

# metrics
carbon-log-metrics = { path = "metrics/log-metrics", version = "0.9.1" }
carbon-macros = { path = "crates/macros", version = "0.9.1" }
carbon-marginfi-v2-decoder = { path = "decoders/marginfi-v2-decoder", version = "0.9.1" }
carbon-marinade-finance-decoder = { path = "decoders/marinade-finance-decoder", version = "0.9.1" }
carbon-memo-program-decoder = { path = "decoders/memo-program-decoder", version = "0.9.1" }
carbon-meteora-damm-v2-decoder = { path = "decoders/meteora-damm-v2-decoder", version = "0.9.1" }
carbon-meteora-dlmm-decoder = { path = "decoders/meteora-dlmm-decoder", version = "0.9.1" }
carbon-meteora-pools-decoder = { path = "decoders/meteora-pools-decoder", version = "0.9.1" }
carbon-moonshot-decoder = { path = "decoders/moonshot-decoder", version = "0.9.1" }
carbon-mpl-core-decoder = { path = "decoders/mpl-core-decoder", version = "0.9.1" }
carbon-mpl-token-metadata-decoder = { path = "decoders/mpl-token-metadata-decoder", version = "0.9.1" }
carbon-name-service-decoder = { path = "decoders/name-service-decoder", version = "0.9.1" }
carbon-okx-dex-decoder = { path = "decoders/okx-dex-decoder", version = "0.9.1" }
carbon-openbook-v2-decoder = { path = "decoders/openbook-v2-decoder", version = "0.9.1" }
carbon-orca-whirlpool-decoder = { path = "decoders/orca-whirlpool-decoder", version = "0.9.1" }
carbon-phoenix-v1-decoder = { path = "decoders/phoenix-v1-decoder", version = "0.9.1" }
carbon-postgres-client = { path = "crates/postgres-client", version = "0.9.1" }
carbon-proc-macros = { path = "crates/proc-macros", version = "0.9.1" }
carbon-prometheus-metrics = { path = "metrics/prometheus-metrics", version = "0.9.1" }
carbon-pump-swap-decoder = { path = "decoders/pump-swap-decoder", version = "0.9.1" }
carbon-pumpfun-decoder = { path = "decoders/pumpfun-decoder", version = "0.9.1" }
carbon-raydium-amm-v4-decoder = { path = "decoders/raydium-amm-v4-decoder", version = "0.9.1" }
carbon-raydium-clmm-decoder = { path = "decoders/raydium-clmm-decoder", version = "0.9.1" }
carbon-raydium-cpmm-decoder = { path = "decoders/raydium-cpmm-decoder", version = "0.9.1" }
carbon-raydium-launchpad-decoder = { path = "decoders/raydium-launchpad-decoder", version = "0.9.1" }
carbon-raydium-liquidity-locking-decoder = { path = "decoders/carbon-raydium-liquidity-locking-decoder", version = "0.9.1" }
carbon-raydium-stable-swap-decoder = { path = "decoders/raydium-stable-swap-decoder", version = "0.9.1" }
carbon-rpc-block-crawler-datasource = { path = "datasources/rpc-block-crawler-datasource", version = "0.9.1" }
carbon-rpc-block-subscribe-datasource = { path = "datasources/rpc-block-subscribe-datasource", version = "0.9.1" }
carbon-rpc-program-subscribe-datasource = { path = "datasources/rpc-program-subscribe-datasource", version = "0.9.1" }
carbon-rpc-transaction-crawler-datasource = { path = "datasources/rpc-transaction-crawler-datasource", version = "0.9.1" }
carbon-sharky-decoder = { path = "decoders/sharky-decoder", version = "0.9.1" }
carbon-solayer-restaking-program-decoder = { path = "decoders/solayer-restaking-program-decoder", version = "0.9.1" }
carbon-stabble-stable-swap-decoder = { path = "decoders/carbon-stabble-stable-swap-decoder", version = "0.9.1" }
carbon-stabble-weighted-swap-decoder = { path = "decoders/carbon-stabble-weighted-swap-decoder", version = "0.9.1" }
carbon-stake-program-decoder = { path = "decoders/carbon-stake-program-decoder", version = "0.9.1" }
carbon-system-program-decoder = { path = "decoders/system-program-decoder", version = "0.9.1" }
carbon-test-utils = { path = "crates/test-utils", version = "0.9.1" }
carbon-token-2022-decoder = { path = "decoders/token-2022-decoder", version = "0.9.1" }
carbon-token-program-decoder = { path = "decoders/token-program-decoder", version = "0.9.1" }
carbon-virtual-curve-decoder = { path = "decoders/virtual-curve-decoder", version = "0.9.1" }
carbon-virtuals-decoder = { path = "decoders/virtuals-decoder", version = "0.9.1" }
carbon-wavebreak-decoder = { path = "decoders/wavebreak-decoder", version = "0.9.1" }
carbon-yellowstone-grpc-datasource = { path = "datasources/yellowstone-grpc-datasource", version = "0.9.1" }
carbon-zeta-decoder = { path = "decoders/zeta-decoder", version = "0.9.1" }

# misc
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.30", features = ["derive"] }
console = "0.15.8"
dialoguer = { version = "0.11.0", default-features = false, features = ["editor"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
flate2 = "1.0.35"
futures = "0.3.30"
futures-util = "0.3.31"
heck = "0.5.0"
# Took commit  "missing json feature of reqwest"
helius = { git = "https://github.com/helius-labs/helius-rust-sdk.git", rev = "91d3584c1d68574ea2ef42ba25f049416014106a" }
hex = "0.4.3"
indicatif = "0.17.8"
inquire = "0.7.5"
juniper = { version = "0.16.1", features = ["uuid"] }
juniper_axum = { version = "0.2.0" }
juniper_codegen = { version = "0.16.0" }
juniper_graphql_ws = { version = "0.4.0", features = ["graphql-transport-ws"] }
log = "0.4.25"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.0"
paste = "1.0.15"
proc-macro2 = "1"
prost = "0.13.5"
prost-types = "0.13.5"
quote = "1.0"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
retry = "2.0.0"
rust_decimal = { version = "1.36.0", features = ["db-postgres"] }
serde = { version = "1.0.208", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.138"
sha2 = "0.10.8"

# solana
solana-account = "2.2.1"
solana-account-decoder = "2.3.6"
solana-account-decoder-client-types = "2.3.6"
solana-client = "2.3.6"
solana-clock = "2.2.2"
solana-commitment-config = "2.2.1"
solana-entry = "2.3.6"
solana-hash = "2.3.0"
solana-instruction = { version = "2.3.0", default-features = false }
solana-message = "2.3.6"
solana-native-token = "2.3.0"
solana-program = "2.2.1"
solana-program-pack = "2.2.1"
solana-pubkey = { version = "2.3.6", features = ["serde", "borsh", "curve25519"] }
solana-signature = { version = "2.3.0", features = ["rand"] }
solana-transaction = "=2.2.2"
solana-transaction-context = "2.3.6"
solana-transaction-status = "2.3.6"
spl-memo = "6.0.0"
spl-token = "7.0.0"
sqlx = { version = "0.8.5", features = [
    "macros",
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "rust_decimal",
] }
sqlx_migrator = { version = "0.17.0", features = ["postgres"] }
syn = { version = "1.0", features = ["full"] }
thiserror = { version = "2.0.12", default-features = false }
tokio = { version = "1.45.0", features = ["rt", "time", "signal", "macros"] }
tokio-retry = "0.3.0"
tokio-util = "0.7.15"
tonic = { version = "0.13.1", features = [ "tls-native-roots", "tls-webpki-roots" ] }
tonic-build = "0.13.1"
unicode-xid = "0.2"
uuid = { version = "1.6.1", features = ["serde", "v7"] }
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v8.0.0+solana.2.3.6" }
yellowstone-grpc-proto  = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v8.0.0+solana.2.3.6", features = ["convert"] }

[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
