[workspace]
members = ["crates/*", "datasources/*", "decoders/*", "examples/*", "metrics/*"]
resolver = "2"

[workspace.package]
rust-version = "1.82"
version = "0.12.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sevenlabs-hq/carbon"

[workspace.dependencies]

# other
anyhow = "1.0.100"
askama = "0.12.1"
async-stream = "0.3.6"
async-trait = { version = "0.1.89" }
axum = "0.8.7"
base64 = "0.22.1"
bigdecimal = "0.4.9"
bincode = "1.3.3"
borsh = { version = "1.5.7" }
borsh-derive-internal-satellite = "0.11.0"
bs58 = { version = "0.5.1", default-features = false }

# decoders
carbon-address-lookup-table-decoder = { path = "decoders/address-lookup-table-decoder", version = "0.12.0" }
carbon-associated-token-account-decoder = { path = "decoders/associated-token-account-decoder", version = "0.12.0" }
carbon-bonkswap-decoder = { path = "decoders/bonkswap-decoder", version = "0.12.0" }
carbon-boop-decoder = { path = "decoders/boop-decoder", version = "0.12.0" }
carbon-bubblegum-decoder = { path = "decoders/bubblegum-decoder", version = "0.12.0" }
carbon-circle-message-transmitter-v2-decoder = { path = "decoders/circle-message-transmitter-v2-decoder", version = "0.12.0" }
carbon-circle-token-messenger-v2-decoder = { path = "decoders/carbon-circle-token-messenger-v2-decoder", version = "0.12.0" }

# main
carbon-core = { path = "crates/core", version = "0.12.0" }
carbon-dflow-aggregator-v4-decoder = { path = "decoders/dflow-aggregator-v4-decoder", version = "0.12.0" }
carbon-drift-v2-decoder = { path = "decoders/drift-v2-decoder", version = "0.12.0" }
carbon-fluxbeam-decoder = { path = "decoders/fluxbeam-decoder", version = "0.12.0" }
carbon-gavel-decoder = { path = "decoders/gavel-decoder", version = "0.12.0" }

# datasources
carbon-helius-atlas-ws-datasource = { path = "datasources/helius-atlas-ws-datasource", version = "0.12.0" }
carbon-helius-gpa-v2-datasource = { path = "datasources/helius-gpa-v2-datasource", version = "0.12.0" }
carbon-helius-laserstream-datasource = { path = "datasources/helius-laserstream-datasource", version = "0.12.0" }

# vendor
carbon-jetstreamer-datasource = { path = "datasources/jetstreamer-datasource", version = "0.12.0" }
carbon-jito-protos = { path = "misc/jito-protos", version = "0.2.4" }
carbon-jito-shredstream-grpc-datasource = { path = "datasources/jito-shredstream-grpc-datasource", version = "0.12.0" }
carbon-jupiter-dca-decoder = { path = "decoders/jupiter-dca-decoder", version = "0.12.0" }
carbon-jupiter-limit-order-2-decoder = { path = "decoders/jupiter-limit-order-2-decoder", version = "0.12.0" }
carbon-jupiter-limit-order-decoder = { path = "decoders/jupiter-limit-order-decoder", version = "0.12.0" }
carbon-jupiter-perpetuals-decoder = { path = "decoders/jupiter-perpetuals-decoder", version = "0.12.0" }
carbon-jupiter-swap-decoder = { path = "decoders/jupiter-swap-decoder", version = "0.12.0" }
carbon-kamino-farms-decoder = { path = "decoders/kamino-farms-decoder", version = "0.12.0" }
carbon-kamino-lending-decoder = { path = "decoders/kamino-lending-decoder", version = "0.12.0" }
carbon-kamino-limit-order-decoder = { path = "decoders/kamino-limit-order-decoder", version = "0.12.0" }
carbon-kamino-vault-decoder = { path = "decoders/kamino-vault-decoder", version = "0.12.0" }
carbon-lifinity-amm-v2-decoder = { path = "decoders/lifinity-amm-v2-decoder", version = "0.12.0" }

# metrics
carbon-log-metrics = { path = "metrics/log-metrics", version = "0.12.0" }
carbon-macros = { path = "crates/macros", version = "0.12.0" }
carbon-marginfi-v2-decoder = { path = "decoders/marginfi-v2-decoder", version = "0.12.0" }
carbon-marinade-finance-decoder = { path = "decoders/marinade-finance-decoder", version = "0.12.0" }
carbon-memo-program-decoder = { path = "decoders/memo-program-decoder", version = "0.12.0" }
carbon-meteora-damm-v2-decoder = { path = "decoders/meteora-damm-v2-decoder", version = "0.12.0" }
carbon-meteora-dbc-decoder = { path = "decoders/meteora-dbc-decoder", version = "0.12.0" }
carbon-meteora-dlmm-decoder = { path = "decoders/meteora-dlmm-decoder", version = "0.12.0" }
carbon-meteora-pools-decoder = { path = "decoders/meteora-pools-decoder", version = "0.12.0" }
carbon-meteora-vault-decoder = { path = "decoders/meteora-vault-decoder", version = "0.12.0" }
carbon-moonshot-decoder = { path = "decoders/moonshot-decoder", version = "0.12.0" }
carbon-mpl-core-decoder = { path = "decoders/mpl-core-decoder", version = "0.12.0" }
carbon-mpl-token-metadata-decoder = { path = "decoders/mpl-token-metadata-decoder", version = "0.12.0" }
carbon-name-service-decoder = { path = "decoders/name-service-decoder", version = "0.12.0" }
carbon-okx-dex-decoder = { path = "decoders/okx-dex-decoder", version = "0.12.0" }
carbon-openbook-v2-decoder = { path = "decoders/openbook-v2-decoder", version = "0.12.0" }
carbon-orca-whirlpool-decoder = { path = "decoders/orca-whirlpool-decoder", version = "0.12.0" }
carbon-pancake-swap-decoder = { path = "decoders/pancake-swap-decoder", version = "0.12.0" }
carbon-phoenix-v1-decoder = { path = "decoders/phoenix-v1-decoder", version = "0.12.0" }
carbon-proc-macros = { path = "crates/proc-macros", version = "0.12.0" }
carbon-prometheus-metrics = { path = "metrics/prometheus-metrics", version = "0.12.0" }
carbon-pump-fees-decoder = { path = "decoders/pump-fees-decoder", version = "0.12.0" }
carbon-pump-swap-decoder = { path = "decoders/pump-swap-decoder", version = "0.12.0" }
carbon-pumpfun-decoder = { path = "decoders/pumpfun-decoder", version = "0.12.0" }
carbon-raydium-amm-v4-decoder = { path = "decoders/raydium-amm-v4-decoder", version = "0.12.0" }
carbon-raydium-clmm-decoder = { path = "decoders/raydium-clmm-decoder", version = "0.12.0" }
carbon-raydium-cpmm-decoder = { path = "decoders/raydium-cpmm-decoder", version = "0.12.0" }
carbon-raydium-launchpad-decoder = { path = "decoders/raydium-launchpad-decoder", version = "0.12.0" }
carbon-raydium-liquidity-locking-decoder = { path = "decoders/carbon-raydium-liquidity-locking-decoder", version = "0.12.0" }
carbon-raydium-stable-swap-decoder = { path = "decoders/raydium-stable-swap-decoder", version = "0.12.0" }
carbon-rpc-block-crawler-datasource = { path = "datasources/rpc-block-crawler-datasource", version = "0.12.0" }
carbon-rpc-block-subscribe-datasource = { path = "datasources/rpc-block-subscribe-datasource", version = "0.12.0" }
carbon-rpc-gpa-datasource = { path = "datasources/rpc-gpa-datasource", version = "0.12.0" }
carbon-rpc-program-subscribe-datasource = { path = "datasources/rpc-program-subscribe-datasource", version = "0.12.0" }
carbon-rpc-transaction-crawler-datasource = { path = "datasources/rpc-transaction-crawler-datasource", version = "0.12.0" }
carbon-sharky-decoder = { path = "decoders/sharky-decoder", version = "0.12.0" }
carbon-solayer-restaking-program-decoder = { path = "decoders/solayer-restaking-program-decoder", version = "0.12.0" }
carbon-stabble-stable-swap-decoder = { path = "decoders/carbon-stabble-stable-swap-decoder", version = "0.12.0" }
carbon-stabble-weighted-swap-decoder = { path = "decoders/carbon-stabble-weighted-swap-decoder", version = "0.12.0" }
carbon-stake-program-decoder = { path = "decoders/carbon-stake-program-decoder", version = "0.12.0" }
carbon-stream-message-datasource = { path = "datasources/stream-message-datasource", version = "0.12.0" }
carbon-swig-decoder = { path = "decoders/swig-decoder", version = "0.12.0" }
carbon-system-program-decoder = { path = "decoders/system-program-decoder", version = "0.12.0" }
carbon-test-utils = { path = "crates/test-utils", version = "0.12.0" }
carbon-token-2022-decoder = { path = "decoders/token-2022-decoder", version = "0.12.0" }
carbon-token-program-decoder = { path = "decoders/token-program-decoder", version = "0.12.0" }
carbon-vertigo-decoder = { path = "decoders/vertigo-decoder", version = "0.12.0" }
carbon-virtuals-decoder = { path = "decoders/virtuals-decoder", version = "0.12.0" }
carbon-wavebreak-decoder = { path = "decoders/wavebreak-decoder", version = "0.12.0" }
carbon-yellowstone-grpc-datasource = { path = "datasources/yellowstone-grpc-datasource", version = "0.12.0" }
carbon-zeta-decoder = { path = "decoders/zeta-decoder", version = "0.12.0" }

# misc
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.52", features = ["derive"] }
console = "0.15.11"
dialoguer = { version = "0.11.0", default-features = false, features = ["editor"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
flate2 = "1.1.5"
futures = "0.3.31"
futures-util = "0.3.31"
heck = "0.5.0"
helius = { git = "https://github.com/helius-labs/helius-rust-sdk", rev = "f62d528283ca009acacebdd343a8cf2bc0fd09cd" }
hex = "0.4.3"
indicatif = "0.17.11"
inquire = "0.7.5"
juniper = { version = "0.16.2", features = ["uuid"] }
juniper_axum = { version = "0.2.0" }
juniper_codegen = { version = "0.16.0" }
juniper_graphql_ws = { version = "0.4.0", features = ["graphql-transport-ws"] }
log = "0.4.28"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.16.2"
num-traits = { version = "0.2.19", features = ["i128"] }
paste = "1.0.15"
proc-macro2 = "1"
prost = "0.13.5"
prost-types = "0.13.5"
quote = "1.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
retry = "2.1.0"
rust_decimal = { version = "1.39.0", features = ["db-postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.145"
sha2 = "0.10.9"

# solana
solana-account = "^3.0.0"
solana-account-decoder = "^3.0.0"
solana-account-decoder-client-types = "^3.0.0"
solana-client = "^3.0.0"
solana-clock = "^3.0.0"
solana-commitment-config = "^3.0.0"
solana-entry = "^3.0.0"
solana-hash = "^3.0.0"
solana-instruction = { version = "^3.0.0", default-features = false }
solana-message = "^3.0.0"
solana-native-token = "^3.0.0"
solana-program = { version = "^3.0.0", features = ["borsh"] }
solana-program-pack = "^3.0.0"
solana-pubkey = { version = "^3.0.0", features = ["serde", "borsh", "curve25519"] }
solana-reward-info = "^3.0.0"
solana-signature = { version = "^3.0.0", features = ["rand"] }
solana-system-interface = "^2.0.0"
solana-transaction = "^3.0.0"
solana-transaction-context = "^3.0.0"
solana-transaction-error = "^3.0.0"
solana-transaction-status = "^3.0.0"
solana-transaction-status-client-types = "^3.0.0"

spl-memo-interface = "2.0.0"
spl-pod = "0.7.1"
spl-token-2022 = "10.0.0"
spl-token-group-interface = "0.7.1"
spl-token-interface = "2.0.0"
spl-token-metadata-interface = "0.8.0"
spl-type-length-value = "0.9.0"
sqlx = { version = "0.8.6", features = [
  "macros",
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "rust_decimal",
  "bigdecimal",
] }
sqlx_migrator = { version = "0.17.0", features = ["postgres"] }
syn = { version = "1.0", features = ["full"] }
thiserror = { version = "2.0.17", default-features = false }
tokio = { version = "1.48.0", features = ["rt", "time", "signal", "macros"] }
tokio-retry = "0.3.0"
tokio-util = "0.7.17"
tonic = { version = "0.13.1", features = ["tls-native-roots", "tls-webpki-roots"] }
tonic-build = "0.13.1"
unicode-xid = "0.2"
uuid = { version = "1.18.1", features = ["serde", "v7"] }
yellowstone-grpc-client = { version = "10.0.0" }
yellowstone-grpc-proto = { version = "10.0.0", features = ["convert"] }
