[package]
name = "carbon-borsh-types"
version = "0.12.0"
edition = { workspace = true }
description = "Shared borsh types that fix Codama mis-mappings for Carbon decoders"
license = { workspace = true }
repository = { workspace = true }
keywords = ["solana", "borsh", "decoder"]
categories = ["encoding"]

[dependencies]
borsh = { workspace = true, features = ["derive"] }
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]
