[package]
name = "carbon-core"
version = { workspace = true }
edition = { workspace = true }
description = "Core library for Carbon"
license = { workspace = true }

[features]
default = ["macros"]
macros = ["carbon-macros", "carbon-proc-macros"]

[dependencies]
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }

async-trait = { workspace = true }
borsh = { version = "0.10.3" }
bs58 = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

# Optional macro dependencies
carbon-macros = { workspace = true, optional = true }
carbon-proc-macros = { workspace = true, optional = true }

[lib]
crate-type = ["rlib"]
