[package]
name = "carbon-core"
version = "0.12.0"
edition = { workspace = true }
description = "Core library for Carbon"
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
keywords = ["solana", "indexer"]
categories = ["encoding"]

[features]
default = ["macros"]
macros = ["carbon-macros", "carbon-proc-macros"]
postgres = ["sqlx", "num-traits", "sqlx_migrator", "bigdecimal"]
graphql = ["juniper", "axum", "juniper_axum"]

[dependencies]
solana-account = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true, default-features = false }
solana-message = { workspace = true }
solana-program = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-context = { workspace = true }
solana-transaction-status = { workspace = true }

async-trait = { workspace = true }
borsh = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

# Optional macro dependencies
carbon-macros = { workspace = true, optional = true }
carbon-proc-macros = { workspace = true, optional = true }
num-traits = { workspace = true, features = ["i128"], optional = true }
sqlx = { workspace = true, features = ["postgres", "rust_decimal", "bigdecimal"], optional = true }
sqlx_migrator = { workspace = true, optional = true }
juniper = { workspace = true, optional = true }
juniper_axum = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
bigdecimal = { workspace = true, optional = true }

[lib]
crate-type = ["rlib"]

[dev-dependencies]
carbon-test-utils = { workspace = true }
solana-account-decoder-client-types = { workspace = true }
