[package]
name = "idl-parser-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
serde_json = "1.0.125"
serde = { version = "1.0.208", features = ["derive"] }
borsh = { version = "1.5.1", features = ["derive"] }
console = "0.15.8"
dialoguer = "0.11.0"
indicatif = "0.17.8"
clap = { version = "4.5.4", features = ["derive"] }
carbon-core = { path = "../core" }
askama = "0.12.1"
hex = "0.4.3"
sha2 = "0.10.8"
